# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./categories";
 export * from "./projects";
 export * from "./project_images";
 export * from "./machinery";
+export * from "./settings";
